--- a/fe-designer-dragdrop/src/app/designer/canvas/canvas.less
+++ b/fe-designer-dragdrop/src/app/designer/canvas/canvas.less
@@ -29,6 +29,14 @@
   }
 }
 
+.page-grid {
+  position: absolute;
+  pointer-events: none;
+  overflow: hidden;
+  border: 1px solid fade(@primary, 35%);
+  border-radius: 0;
+}
+
 .grid-pattern {
   position: absolute;
   top: 0;
