--- a/fe-designer-dragdrop/src/app/designer/canvas-element/canvas-element.less
+++ b/fe-designer-dragdrop/src/app/designer/canvas-element/canvas-element.less
@@ -21,13 +21,14 @@
 
 .element-coordinates {
   position: absolute;
-  top: -24px;
+  top: -28px;
   left: 0;
-  padding: 2px 6px;
+  padding: 4px 10px;
   background-color: @primary;
   color: @primary-foreground;
   font-family: 'JetBrains Mono', monospace;
-  font-size: 11px;
+  font-size: 13px;
+  font-weight: 600;
   border-radius: @radius-sm;
   white-space: nowrap;
   pointer-events: none;
@@ -81,26 +82,74 @@
   position: absolute;
   background-color: @primary;
   border-radius: 4px;
-  opacity: 0.9;
+  opacity: 0.95;
   box-shadow: 0 0 0 1px fade(@primary-foreground, 50%);
   z-index: 20;
 
-  &.resize-handle-horizontal {
+  &.resize-handle-top,
+  &.resize-handle-bottom {
+    width: 28px;
+    height: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: ns-resize;
+  }
+
+  &.resize-handle-top {
+    top: -7px;
+  }
+
+  &.resize-handle-bottom {
+    bottom: -7px;
+  }
+
+  &.resize-handle-left,
+  &.resize-handle-right {
+    width: 10px;
+    height: 28px;
     top: 50%;
-    right: -6px;
-    width: 12px;
-    height: 24px;
     transform: translateY(-50%);
     cursor: ew-resize;
   }
 
-  &.resize-handle-vertical {
-    bottom: -6px;
-    left: 50%;
-    width: 24px;
-    height: 12px;
-    transform: translateX(-50%);
-    cursor: ns-resize;
+  &.resize-handle-left {
+    left: -7px;
+  }
+
+  &.resize-handle-right {
+    right: -7px;
+  }
+
+  &.resize-handle-top-left,
+  &.resize-handle-top-right,
+  &.resize-handle-bottom-left,
+  &.resize-handle-bottom-right {
+    width: 14px;
+    height: 14px;
+  }
+
+  &.resize-handle-top-left {
+    top: -7px;
+    left: -7px;
+    cursor: nwse-resize;
+  }
+
+  &.resize-handle-top-right {
+    top: -7px;
+    right: -7px;
+    cursor: nesw-resize;
+  }
+
+  &.resize-handle-bottom-left {
+    bottom: -7px;
+    left: -7px;
+    cursor: nesw-resize;
+  }
+
+  &.resize-handle-bottom-right {
+    bottom: -7px;
+    right: -7px;
+    cursor: nwse-resize;
   }
 }
 
