--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
@@ -95,7 +95,7 @@
 }
 
 .table-context-menu {
-  position: fixed;
+  position: absolute;
   min-width: 200px;
   background-color: @popover;
   border: 1px solid @popover-border;
@@ -122,7 +122,7 @@
 }
 
 .table-context-menu-overlay {
-  position: fixed;
+  position: absolute;
   inset: 0;
   z-index: @z-popover - 1;
 }
