Zoom to width now works correctly.

--- a/fe-designer-dragdrop/src/app/designer/canvas/canvas.html
+++ b/fe-designer-dragdrop/src/app/designer/canvas/canvas.html
@@ -1,6 +1,7 @@
 <div 
   #workspace
   class="canvas-workspace" 
+  [class.canvas-workspace--centered]="shouldCenterCanvas()"
   (drop)="onDrop($event)" 
   (dragover)="onDragOver($event)"
   (click)="onCanvasClick()"
