--- a/fe-designer-dragdrop/src/app/designer/canvas/canvas.less
+++ b/fe-designer-dragdrop/src/app/designer/canvas/canvas.less
@@ -6,9 +6,13 @@
   overflow: auto;
   background-color: hsl(220, 6%, 92%); // Gray workspace background
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   padding: 40px;
+}
+
+.canvas-workspace.canvas-workspace--centered {
+  align-items: center;
 }
 
 .a4-sheet-wrapper {
