--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
@@ -34,10 +34,22 @@
     position: relative;
     transition: background-color @transition-fast, box-shadow @transition-fast;
     user-select: none;
+    vertical-align: top;
 
     &.selected {
       background-color: fade(@primary, 12%);
       box-shadow: inset 0 0 0 2px fade(@primary, 40%);
+    }
+
+    .cell-content {
+      width: 100%;
+      height: 100%;
+      padding: 2px 4px;
+      box-sizing: border-box;
+      text-align: left;
+      font-size: 12px;
+      line-height: 1.3;
+      white-space: pre-wrap; // preserve whitespace & newlines
     }
   }
 }
@@ -125,4 +137,36 @@
   position: absolute;
   inset: 0;
   z-index: @z-popover - 1;
+}
+
+.cell-actions-toolbar {
+  position: absolute;
+  transform: translate(-50%, -100%);
+  display: flex;
+  gap: 4px;
+  background-color: @primary;
+  color: @primary-foreground;
+  padding: 4px 6px;
+  border-radius: @radius-sm;
+  box-shadow: @shadow;
+  font-size: 12px;
+  z-index: @z-popover;
+}
+
+.cell-action {
+  background: transparent;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  padding: 2px 4px;
+  line-height: 1;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color @transition-fast;
+
+  &:hover {
+    background-color: fade(@primary-foreground, 15%);
+  }
 }
