Selected Cell properties: Padding and H/V alignments can be set.

--- a/fe-designer-dragdrop/src/styles.less
+++ b/fe-designer-dragdrop/src/styles.less
@@ -1,5 +1,6 @@
 // Import theme variables
 @import './styles/theme.less';
+@import './styles/alignment-icons.less';
 
 // ============================================
 // GLOBAL STYLES
