--- a/fe-designer-dragdrop/src/styles/alignment-icons.less
+++ b/fe-designer-dragdrop/src/styles/alignment-icons.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'AlignmentIcons';
-  src: url('/public/fonts/AlignmentIcons.woff2') format('woff2');
+  src: url('../../public/fonts/AlignmentIcons.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: block;
