--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
@@ -138,7 +138,7 @@
 
 .cell-actions-toolbar {
   position: absolute;
-  transform: translate(-50%, -100%);
+  transform: translate(-50%, -120%); // lifted a bit more to avoid overlap with vertical resizer
   display: flex;
   gap: 4px;
   background-color: @primary;
