--- a/fe-designer-dragdrop/src/styles.less
+++ b/fe-designer-dragdrop/src/styles.less
@@ -1,6 +1,7 @@
 // Import theme variables
 @import './styles/theme.less';
 @import './styles/alignment-icons.less';
+@import 'quill/dist/quill.snow.css';
 
 // ============================================
 // GLOBAL STYLES
