fix(quill): custom font/size/line-height labels via css + extended font whitelist

--- a/fe-designer-dragdrop/src/styles.less
+++ b/fe-designer-dragdrop/src/styles.less
@@ -2,6 +2,7 @@
 @import './styles/theme.less';
 @import './styles/alignment-icons.less';
 @import 'quill/dist/quill.snow.css';
+@import './styles/quill-list-styles.css';
 
 // ============================================
 // GLOBAL STYLES
